force-app/main/default/objects/Supplier_Catalogue__c/Supplier_Catalogue__c.object-meta.xml
<CustomObject>
    <description>Sellable catalogue published by a supplier Account.</description>
    <label>Supplier Catalogue</label>
    <nameField>
        <label>Catalogue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Catalogues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>