force-app/main/default/objects/Supplier_Catalogue__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Supplier Account that owns this catalogue.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Catalogues</relationshipLabel>
    <relationshipName>Supplier_Catalogues</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>