force-app/main/default/objects/Supplier_Catalogue__c/validationRules/Effective_To_After_From.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_To_After_From</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Effective_To__c)) &amp;&amp; NOT(ISBLANK(Effective_From__c)) &amp;&amp; Effective_To__c &lt; Effective_From__c</errorConditionFormula>
    <errorDisplayField>Effective_To__c</errorDisplayField>
    <errorMessage>Effective To must be on or after Effective From.</errorMessage>
</ValidationRule>