force-app/main/default/objects/Supplier_Catalogue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>